# myfirstbazelapp

./: BUILD.bazel  Dockerfile  Dockerfile-cloudbuild  Dockerfile-ngtest  README.md  angular.json.bak  bazel-bin  bazel-myfirstbazelapp  bazel-testlogs  chromium-local.json  cloudbuild.yaml  cluster.js  config-production.json  config.js  karma.conf.js  package-lock.json  package.json  server.js  test.sh
BazelTest/: BUILD.bazel  angular.json  chromium-no-sandbox.json  karma.conf.js  package-lock.json  package.json
BazelTest/e2e/src/: app.e2e-spec.ts
BazelTest/src/: BUILD.bazel  index.html
BazelTest/src/app/: app.component.ts
middlewares/: CORS.js  index.js
src/: BUILD.bazel  karma.conf.js  web.bzl
src/app/: app.component.spec.ts  app.module.ts
src/app/test/: test.component.spec.ts  test.component.ts
src/app/test1/: test1.component.spec.ts
src/app/test2/: test2.component.spec.ts
src/app/test3/: test3.component.spec.ts
src/app/test4/: test4.component.spec.ts
utils/: logger.js
