package(default_visibility = ["//visibility:public"])

custom_browser(
    name = "chromium-no-sandbox",
    browser = "@io_bazel_rules_webtesting//browsers:chromium-local",
    metadata = "chromium-no-sandbox.json",
    visibility = ["//frontend:__subpackages__"],
)

# This export allows targets in other packages to reference files that live
# in this package.
exports_files([
    "tsconfig.json"
])
