package(default_visibility = ["//visibility:public"])
# This export allows targets in other packages to reference files that live
# in this package.
exports_files([
    "tsconfig.json"
])

load("@io_bazel_rules_webtesting//web:web.bzl", "browser", "custom_browser")
custom_browser(
    name = "chromium-local",
    browser = "@io_bazel_rules_webtesting//browsers:chromium-local",
    metadata = "chromium-local.json"
)